# django-searchfield

./: .gitignore  README.md  pyproject.toml
docs/: AI.md  README.md  development.md  purpose.md  structure.md
src/searchfield/: __init__.py  decorators.py  fields.py
tests/: settings.py
tests/app/: apps.py  models.py
